tests/str_format_empty_placeholder_bad.stderr
tests/str_format_empty_placeholder_bad.hop:6:2: error: HOP2083: const block failed compile-time evaluation: assert condition evaluated to false during const evaluation
  6 |     out.format("x={}", 1 as i64)
    |  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
tests/str_format_empty_placeholder_bad.hop:8:1: note: assert condition evaluated to false during const evaluation
  8 | 
    | ^
